alignment fix

--- a/style.css
+++ b/style.css
@@ -13,12 +13,16 @@ html {
     background-color: antiquewhite;
     background-image: url(wierw.png);
     background-size: 90%;
-    background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: bottom 70% left 150%;
 }
 
 header {
+  margin: 0px;
+  background-color: antiquewhite;
+}
+
+body {
   margin: 0px;
 }
 
